--- a/haproxy/chef/cookbooks/haproxy/templates/default/haproxy.cfg.erb
+++ b/haproxy/chef/cookbooks/haproxy/templates/default/haproxy.cfg.erb
@@ -145,3 +145,12 @@ listen swift
 <%= @swift_servers[i] %>
 <% end %>
 <% end %> 
+
+listen stats :1936
+  mode http
+  stats enable
+  stats hide-version
+  stats scope .
+  stats realm Haproxy\ Statistics
+  stats uri /
+  stats auth haproxy:pass
