--- a/haproxy/chef/cookbooks/haproxy/templates/default/haproxy.cfg.erb
+++ b/haproxy/chef/cookbooks/haproxy/templates/default/haproxy.cfg.erb
@@ -22,6 +22,10 @@ defaults
   timeout  server 1m
   timeout  check 10s
 
+listen admin
+ bind <%= @admin_ip %>:80
+ stats enable
+
 listen horizon
   bind <%= @public_ip %>:80
   balance  roundrobin
