Added refresh for stats
Addition as recommended by SR

--- a/haproxy/chef/cookbooks/haproxy/templates/default/haproxy.cfg.erb
+++ b/haproxy/chef/cookbooks/haproxy/templates/default/haproxy.cfg.erb
@@ -25,6 +25,7 @@ listen admin
   bind <%= @admin_ip %>:83
   stats enable
   stats auth haproxy:pass
+  stats refresh 60s
   mode http
   stats hide-version
   stats realm Haproxy\ Statistics
